--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-    <h1>HELLO WORLD!</h1>
-    <h2>Please sign in</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                {% for message in get_flash %}
+                    <div class="alert alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                {{wtf.quick_form(login_form)}}
+                <p> Don't have an account? <a href="{{url_for('auth.signup')}}">Sign up here</a></p>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
 {% endblock %}
