--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-    <h1>HELLO WORLD!</h1>
+    <div class="container">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            {{wtf.quick_form(registration_form)}}
+            <p class="text-center"> Already have an account? <a href="{{url_for('auth.login')}}">Signin here</a></p>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
 {% endblock %}
