--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,7 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a href="/" class="navbar-brand">OMP</a>
+                {% if current_user.is_authenticated %}
+                    <a href="{{url_for("main.index")}}" class="navbar-brand">OMP</a>
+                {% else %}
+                    <a href="/" class="navbar-brand">One Minute Pickup-lines</a>
+                {% endif %}
+
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
